Creating project and database
Creating the porject, database. Making database connection, migrations and inseting tables in the database.

--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev src/server.ts",
@@ -20,5 +19,6 @@
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.9.5"
-  }
+  },
+  "description": ""
 }
